// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout header component should render the menu when passed 1`] = `
<React.Fragment>
  <header
    className="with-proposition"
    id="global-header"
    role="banner"
  >
    <div
      className="header-wrapper"
    >
      <div
        className="header-global"
      >
        <div
          className="header-logo"
        >
          <a
            className="content"
            href="https://www.gov.uk"
            id="header-application"
            title=""
          >
            GOV.UK
          </a>
        </div>
      </div>
      <div
        className="header-proposition"
      >
        <div
          className="content"
        >
          <nav
            id="proposition-menu"
          >
            <div
              id="proposition-header"
            >
              <a
                href="/"
                id="proposition-name"
              >
                Service Name
              </a>
            </div>
            <React.Fragment>
              <label
                aria-label="menu"
                htmlFor="toggle-mobile-menu"
              >
                Menu
              </label>
              <input
                id="toggle-mobile-menu"
                type="checkbox"
              />
              <ul
                id="main-menu"
              >
                <li
                  key="first"
                >
                  <Link
                    replace={false}
                    to="/"
                  >
                    first
                  </Link>
                </li>
                <li
                  key="second"
                >
                  <Link
                    replace={false}
                    to="/"
                  >
                    second
                  </Link>
                </li>
              </ul>
            </React.Fragment>
          </nav>
        </div>
      </div>
    </div>
  </header>
  <div
    id="global-header-bar"
  />
</React.Fragment>
`;

exports[`Layout header component should render with default props 1`] = `
Array [
  <header
    class="with-proposition"
    id="global-header"
    role="banner"
  >
    <div
      class="header-wrapper"
    >
      <div
        class="header-global"
      >
        <div
          class="header-logo"
        >
          <a
            class="content"
            href="https://www.gov.uk"
            id="header-application"
            title=""
          >
            GOV.UK
          </a>
        </div>
      </div>
      <div
        class="header-proposition"
      >
        <div
          class="content"
        >
          <nav
            id="proposition-menu"
          >
            <div
              id="proposition-header"
            >
              <a
                href="/"
                id="proposition-name"
              >
                React Application
              </a>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </header>,
  <div
    id="global-header-bar"
  />,
]
`;
